Fix: Fixed the spritesheet file name

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,5 +20,5 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-   - assets/tiles/map.tmx
+   - assets/tiles/
    - assets/images/
