--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,12 +7,15 @@ environment:
   sdk: '>=3.3.0 <4.0.0'
 
 dependencies:
+  audioplayers: ^1.1.1
   flame: ^1.16.0
   flame_tiled: ^1.19.0
   flutter:
     sdk: flutter
-  get: ^4.6.6
+  go_router: ^13.2.0
   logging: ^1.2.0
+  provider: ^6.1.1
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
@@ -21,3 +24,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/sfx/
+    - assets/music/
