--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   audioplayers: ^5.2.1
   flame: ^1.16.0
+  flame_behaviors: ^1.1.0
   flutter:
     sdk: flutter
   go_router: ^13.2.0
