--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   logging: ^1.2.0
   provider: ^6.1.2
   shared_preferences: ^2.2.2
+  vibration: ^1.8.4
 
 dev_dependencies:
   flutter_test:
