--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
     sdk: flutter
   go_router: ^13.2.0
   logging: ^1.2.0
+  package_info_plus: ^4.2.0
   provider: ^6.1.2
   shared_preferences: ^2.2.2
   vibration: ^1.8.4
