--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   audioplayers: ^5.2.1
   flame: ^1.16.0
+  flame_audio: ^2.10.0
   flame_behaviors: ^1.1.0
   flutter:
     sdk: flutter
@@ -36,6 +37,7 @@ flutter:
     - assets/sfx/
     - assets/music/
     - assets/images/
+    - assets/audio/sfx/
   fonts:
     - family: Digitalt
       fonts:
