--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   package_info_plus: ^4.2.0
   provider: ^6.1.2
   shared_preferences: ^2.2.2
+  url_launcher: ^6.2.5
   vibration: ^1.8.4
 
 dev_dependencies:
