--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   package_info_plus: ^4.2.0
   provider: ^6.1.2
   shared_preferences: ^2.2.2
+  transparent_image: ^2.0.1
   url_launcher: ^6.2.5
   uuid: ^4.3.3
   vibration: ^1.8.4
