--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,7 @@ environment:
   sdk: '>=3.3.0 <4.0.0'
 
 dependencies:
-  audioplayers: ^5.2.1
+  audioplayers: ^6.0.0
   flame: ^1.16.0
   flame_behaviors: ^1.1.0
   flutter:
@@ -15,9 +15,9 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   go_router: ^13.2.0
-  intl: any
+  intl: ^0.18.1
   logging: ^1.2.0
-  package_info_plus: ^4.2.0
+  package_info_plus: ^7.0.0
   provider: ^6.1.2
   shared_preferences: ^2.2.2
   transparent_image: ^2.0.1
